# python-futures

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  setup.py
cfuture/: __init__.py  _cfuture.c  _cfuture_future.c  _cfuture_internal.h  _cfuture_pickled.c  _cfuture_shared_value.c  _cfuture_worker.c  _wrap.py  _xi.py  lint.py
examples/: README.md  grpc_server.py
examples/asyncio_server/: README.md  codegen.sh  pyproject.toml
examples/asyncio_server/asyncio_server/: client.py  server.py  work.py
examples/cfuture_server/: README.md  codegen.sh  pyproject.toml
examples/cfuture_server/cfuture_server/: client.py  server.py  work.py
examples/proto/: worker.proto
examples/stress_test/: README.md  codegen.sh  pyproject.toml
examples/stress_test/stress_test/: metrics.py  prompt_bench.py  runner.py  worker.py
tests/: test_all_of.py  test_arity_adaptation.py  test_callbacks.py  test_core_pool.py  test_deps.py  test_fault.py  test_futures.py  test_lint.py  test_optional_deps.py  test_typed_callbacks.py  test_xi_classes.py
tests/c/: .gitignore  Makefile  test_build_shared_dict  test_build_shared_dict.c  test_future_internals.c  test_shared_value  test_shared_value.c
tests/c/test_shared_value.dSYM/Contents/: Info.plist
tests/c/test_shared_value.dSYM/Contents/Resources/DWARF/: test_shared_value
tests/c/test_shared_value.dSYM/Contents/Resources/Relocations/aarch64/: test_shared_value.yml
