[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfuture"
version = "0.1.0"
description = "CompletableFuture-style futures with true GIL-free parallelism via sub-interpreters"
requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest", "pytest-xdist", "flake8", "mypy", "pre-commit"]

[project.entry-points."flake8.extension"]
CFU = "cfuture.lint:CfutureLintPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["cfuture*"]

[tool.pytest.ini_options]
addopts = "-n auto"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_ignores = true
