[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grpc-stress-test"
version = "0.1.0"
description = "Concurrent stress tester for the cfuture and asyncio gRPC servers"
requires-python = ">=3.12"

[project.dependencies]
dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
]

[project.scripts]
stress = "stress_test.runner:main"
